feat: 게임 참가 승인 및 대기자 관리 기능 추가